Removed all JDK 17 goodies except records